优化了next主题配置

--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,13 @@ pagination_dir: page
 ## theme: freemind
 theme: next
 
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
+  
+  
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
