新增两个友情链接

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -149,6 +149,8 @@ links_title: Link
 links:
   菜鸟教程: http://runoob.com/
   易百教程: http://yiibai.com/
+  IT程序猿: https://www.itcodemonkey.com/
+  ImportNew: http://www.importnew.com/
 links_layout: block
 #links_layout: inline
 #links:
