--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,8 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 ## theme: landscape
 ## theme: hipaper
-## theme: freemind
-theme: next
+theme: freemind
+## theme: next
 
 search:
   path: search.xml
