修改博客上github的链接地址

--- a/themes/freemind/_config.yml
+++ b/themes/freemind/_config.yml
@@ -40,7 +40,7 @@ links:
   #   intro: "Freemind.386's Github repository."
   #   icon: "fa fa-github"
   - title: "My Github"
-    url: https://github.com/Bronze-hammer
+    url: https://github.com/xbronze
     intro: "My Github account."
     icon: "fa fa-github"
   - title: "My CSDN"
