--- a/themes/freemind/_config.yml
+++ b/themes/freemind/_config.yml
@@ -63,11 +63,11 @@ duoshuo_shortname:
 
 # Analytics (change to yours)
 google_analytics:
-  enable: true
+  enable: false
   siteid: UA-70812759-1
 baidu_tongji:
   enable: true
-  siteid: cb5448498d7169c668b07c2b255d62c1
+  siteid: 5d4268fe3f695d6111d5659760d4d452
 
 # search
 #swiftype_key: ZP2ZSuHgipSZfRyU8uTR
