修改博客配置和默认文章格式

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 徐子辉的个人站点
-subtitle: Change Myself From Now ON.
-description: 
+subtitle: 在总结中一步步提升自己，要善于总结，好记性不如烂笔头.
+description:
 keywords:
 author: xuzh
 language:
